# new_vrep_version_test

./: CMakeLists.txt  README.md  package.xml  vrep4_test.ttt  vrep_real
include/vrep_test/: controller.h  vrep_bridge.h
include/vrep_test/model/: model.h  rbdl.h
launch/: controller.launch
src/: controller.cpp  main.cpp  vrep_bridge.cpp
src/model/: rbdl.cpp
